Fix: Search appears behind the homepage items
Litt whack løsning men det funker

--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -13,6 +13,7 @@
   background-color: white;
   border-radius: 5px;
   display: block;
+  z-index: 5;
 }
 
 .search-list {
